--- a/BankSystem/Views/AddClientWindowView.xaml
+++ b/BankSystem/Views/AddClientWindowView.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="BankSystem.Views.AddClientWindowView"
+        x:Name="currentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,30 +7,38 @@
         xmlns:local="clr-namespace:BankSystem.Views"
         xmlns:vm="clr-namespace:BankSystem.ViewModels"
         xmlns:wpftk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         Title="AddClientWindowView"
-        Height="360" Width="300"
-        MinHeight="360" MinWidth="300"
-        MaxHeight="360" MaxWidth="300">
+        Height="390" Width="300"
+        MinHeight="380" MinWidth="300">
+    
     <Window.DataContext>
         <vm:AddClientViewModel/>
     </Window.DataContext>
     
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="MouseMove">
+                <i:InvokeCommandAction Command="{Binding VerifyCommand}"/>
+            </i:EventTrigger>    
+        </i:Interaction.Triggers>
+        
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Label Content="{Binding Error}" Foreground="OrangeRed"/>
             <Label Content="First Name"/>
-            <TextBox x:Name="FirstName_tb" Text="{Binding FirstName}"/>
+            <TextBox x:Name="FirstName_tb" Text="{Binding FirstName}" Margin="5,0"/>
             <Label Content="SecondName"/>
-            <TextBox x:Name="SecondName_tb" Text="{Binding SecondName}"/>
+            <TextBox x:Name="SecondName_tb" Text="{Binding SecondName}" Margin="5,0"/>
             <CheckBox Content="IsVip" Margin="5,10,5,5" IsChecked="{Binding IsVip}"/>
             <Label Content="Account"/>
-            <wpftk:MaskedTextBox x:Name="Account_tb" Mask="0000 0000 0000 0000" Text="{Binding Account}"/>
+            <wpftk:MaskedTextBox x:Name="Account_tb" Mask="0000 0000 0000 0000" Text="{Binding Account}" Margin="5,0"/>
             <Label Content="Amount"/>
-            <TextBox x:Name="Amount_tb" Text="{Binding Amount}"/>
+            <TextBox x:Name="Amount_tb" Text="{Binding Amount}" Margin="5,0"/>
             <Label Content="CreditHistory"/>
-            <ComboBox ItemsSource="{Binding CreditHistories}" SelectedItem="{Binding SelectedItem}"/>
-            <Button Content="Add" Margin="5,10,5,5" Command="{Binding Add}"/>
-            <Button Content="Cancel" Margin="5,10,5,5" Command="{Binding Close}"/>
+            <ComboBox ItemsSource="{Binding CreditHistories}" SelectedItem="{Binding SelectedItem}" Margin="5,0"/>
+            <Button Content="Add" Margin="5,10,5,5" Command="{Binding Add}" CommandParameter="{Binding ElementName=currentWindow}"/>
+            <Button Content="Cancel" Margin="5,10,5,5" Command="{Binding Close}" CommandParameter="{Binding ElementName=currentWindow}"/>
         </StackPanel>
     </Grid>
 </Window>
