--- a/BankSystem/Views/AddEmployeeWindowView.xaml
+++ b/BankSystem/Views/AddEmployeeWindowView.xaml
@@ -1,29 +1,41 @@
 ﻿<Window x:Class="BankSystem.Views.AddEmployeeWindowView"
+        x:Name="currentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankSystem.Views"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:wpftk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:vm="clr-namespace:BankSystem.ViewModels"
         mc:Ignorable="d"
         Title="AddEmployeeWindowView" 
-        MinHeight="320" MinWidth="300"
-        Height="302" Width="300"
-        MaxHeight="320" MaxWidth="300">
-    
+        MinHeight="310" MinWidth="300"
+        Height="310" Width="300">
+
+    <Window.DataContext>
+        <vm:AddEmployeeViewModel/>
+    </Window.DataContext>
+
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="MouseMove">
+                <i:InvokeCommandAction Command="{Binding VerifyDataCommand}" CommandParameter="{Binding ElementName=Phone_tb, Path=Text}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
+        
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Label Content="{Binding Error}" Foreground="IndianRed"/>
             <Label Content="First Name"/>
-            <TextBox x:Name="FirstName_tb" Text="{Binding FirstName}"/>
+            <TextBox x:Name="FirstName_tb" Text="{Binding FirstName}" Margin="5,0"/>
             <Label Content="SecondName"/>
-            <TextBox x:Name="SecondName_tb" Text="{Binding SecondName}"/>
+            <TextBox x:Name="SecondName_tb" Text="{Binding SecondName}" Margin="5,0"/>
             <Label Content="Phone"/>
-            <wpftk:MaskedTextBox Mask="0-(000)-000-00-00" Text="{Binding Phone}"/>
+            <wpftk:MaskedTextBox x:Name="Phone_tb" Mask="0-(000)-000-00-00" Margin="5,0"/>
             <Label Content="Departament"/>
-            <ComboBox ItemsSource="{Binding Departaments}" SelectedItem="{Binding SelectedItem}"/>
-            <Button Content="Add" Margin="5,10,5,5" Command="{Binding AddCommand}"/>
-            <Button Content="Cancel" Margin="5,10,5,5" Command="{Binding CloseCommand}"/>
+            <ComboBox ItemsSource="{Binding Departaments}" SelectedItem="{Binding SelectedItem}" Margin="5,0"/>
+            <Button Content="Add" Margin="5,10,5,5" Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
+            <Button Content="Cancel" Margin="5,10,5,5" Command="{Binding CloseCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
         </StackPanel>
     </Grid>
 </Window>
