--- a/BankSystem/Views/EditEmployeeWindowView.xaml
+++ b/BankSystem/Views/EditEmployeeWindowView.xaml
@@ -1,28 +1,35 @@
 ﻿<Window x:Class="BankSystem.Views.EditEmployeeWindowView"
+        x:Name="currentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankSystem.Views"
         xmlns:wpftk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         Title="EditEmployeeWindowView"
         MinHeight="320" MinWidth="300"
-        Height="302" Width="300"
-        MaxHeight="320" MaxWidth="300">
+        Height="302" Width="300">
+    
+    
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="MouseMove">
+                <i:InvokeCommandAction Command="{Binding VerifyCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
+        
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Label Content="{Binding Error}" Foreground="IndianRed"/>
             <Label Content="First Name"/>
-            <TextBox x:Name="FirstName_tb" Text="{Binding FirstName}"/>
+            <TextBox x:Name="FirstName_tb" Margin="5, 0" Text="{Binding FirstName}"/>
             <Label Content="SecondName"/>
-            <TextBox x:Name="SecondName_tb" Text="{Binding SecondName}"/>
+            <TextBox x:Name="SecondName_tb" Margin="5, 0" Text="{Binding SecondName}"/>
             <Label Content="Phone"/>
-            <wpftk:MaskedTextBox Mask="0-(000)-000-00-00" Text="{Binding Phone}"/>
-            <Label Content="Departament"/>
-            <ComboBox ItemsSource="{Binding Departaments}" SelectedItem="{Binding SelectedItem}"/>
-            <Button Content="Add" Margin="5,10,5,5" Command="{Binding AddCommand}"/>
-            <Button Content="Cancel" Margin="5,10,5,5" Command="{Binding CloseCommand}"/>
+            <wpftk:MaskedTextBox Mask="0-(000)-000-00-00" Margin="5, 0" Text="{Binding Phone}"/>
+            <Button Content="Edit" Margin="5,10,5,5" Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
+            <Button Content="Cancel" Margin="5,10,5,5" Command="{Binding CloseCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
         </StackPanel>
     </Grid>
 </Window>
