--- a/BankSystem/Views/FirstLoadView.xaml
+++ b/BankSystem/Views/FirstLoadView.xaml
@@ -1,22 +1,26 @@
 ﻿<Window x:Class="BankSystem.Views.FirstLoadView"
+        x:Name="currentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankSystem.Views"
+        xmlns:vm="clr-namespace:BankSystem.ViewModels"
         mc:Ignorable="d"
         Title="FirstLoadView" 
         MinHeight="150" MinWidth="250"
-        Height="150" Width="250"
-        MaxHeight="150" MaxWidth="250">
-    
+        Height="150" Width="250">
+
+    <Window.DataContext>
+        <vm:FirstConnectionViewModel/>
+    </Window.DataContext>
     
     <Grid>
         <StackPanel>
             <Label Content="Loacal Server Name:"/>
             <TextBox Margin="5,0,5,10" Text="{Binding ServerName}"/>
-            <Button Content="Connect" Margin="5" Command="{Binding ConnectCommand}"/>
-            <Button Content="Close" Margin="5" Command="{Binding CancelCommand}"/>
+            <Button Content="Connect" Margin="5" Command="{Binding ConnectCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
+            <Button Content="Close" Margin="5" Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
         </StackPanel>
     </Grid>
 </Window>
