--- a/BankSystem/Views/MainWindow.xaml
+++ b/BankSystem/Views/MainWindow.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:BankSystem"
         xmlns:vm="clr-namespace:BankSystem.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="800">
-
-
+        Title="MainWindow"
+        MinHeight="550" MinWidth="800"
+        Height="550" Width="800">
 
 
     <Window.Resources>
@@ -87,7 +87,7 @@
 
         <!-- Info/Credits/Deposits -->
         <StackPanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.RowSpan="1">
-            <Button Content="Simulate Payment" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="34" Margin="10,10" Command="{Binding AClientViewModel.SimulateCommand}"/>
+            <Button Content="Simulate Payment" DataContext="{Binding AClientViewModel}" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="34" Margin="10,10" Command="{Binding SimulateCommand}"/>
             <GroupBox x:Name="Info_gb" Header="Info" BorderBrush="SkyBlue" BorderThickness="3" DataContext="{Binding AClientViewModel}">
                 <TextBlock DataContext="{Binding SelectedItem}" Text="{Binding Info}"/>
             </GroupBox>
