--- a/BankSystem/Views/TransactWindowView.xaml
+++ b/BankSystem/Views/TransactWindowView.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="BankSystem.Views.TransactWindowView"
+        x:Name="currentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,13 +8,8 @@
         xmlns:vm ="clr-namespace:BankSystem.ViewModels"
         mc:Ignorable="d"
         Title="TransactWindowView"
-        MaxHeight="290" MaxWidth="250"
         MinHeight="290" MinWidth="250"
         Height="290" Width="250">
-
-    <Window.DataContext>
-        <vm:TransactViewModel/>
-    </Window.DataContext>
 
 
     <Grid>
@@ -28,8 +24,8 @@
             </ComboBox>
             <Label Content="Amount" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="5,5,5,0"/>
             <TextBox VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="5,0,5,5" Text="{Binding Amount}"/>
-            <Button Content="Transact" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="5" Command="{Binding TransactCommand}"/>
-            <Button Content="Cancel" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="5" Command="{Binding CancelCommand}"/>
+            <Button Content="Transact" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="5" Command="{Binding TransactCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
+            <Button Content="Cancel" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="5" Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=currentWindow}"/>
         </StackPanel>
     </Grid>
 </Window>
